--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -106,7 +106,7 @@
   <li><a href="#hdng13">Employer source deductions</a></li>
   <li><a href="#hdng15">Excise duties and taxes</a></li>
   <li><a href="#hdng16">Goods and services tax/Harmonized sales tax (GST/HST)</a></li>
-  <li><a href="#hdng17">Meaning of terms used</a></li>
+ 
 </ul>
 
 
@@ -593,26 +593,40 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-tax.html">First Nations tax (FNT)</a></li>
 </ul>
 
-    
+<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#terms-used-first-nations"></div>	   
 
-
- <h2 id="hdng17">Meaning of terms used</h2> 
- 
-<div class="row">
-<div class="col-xs-12">
-<dl class="dl-horizontal">
-     
-<dt><strong>Indian</strong></dt> <dd><p>For purposes of the tax exemption under section 87 of the Indian Act, the Canada Revenue Agency uses the term “Indian” because it has a legal meaning in the Indian Act. This term is defined in the Indian Act as a person who is registered as an Indian or is entitled to be registered as an Indian. Determining whether a person is entitled to be registered as an Indian is a question of fact. To grant tax benefits to you as an Indian, we need confirmation of your entitlement from Indigenous and Northern Affairs Canada.</p>
-</dd> <dt><strong>Reserve</strong></dt> <dd><p>This has the meaning assigned by the Indian Act. To find out if a tract of land is a reserve under the Act, contact your band office. If your band does not have the answer, contact Indigenous and Northern Affairs Canada.</p>
-</dd> </dl>
- </div>
-</div> 
 
 <section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fnterm"></div>
 	</div></section>
 
+<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>	
+	</div></section>
+
+<section id="ajax-def2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">First Nations employee or worker</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
+	</div></section>
+
+<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">First Nations employee lives on the reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
+	</div></section>
+
+<section id="ajax-def4" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">On a reserve</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
+	</div></section>
+
+<section id="ajax-def5" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Social, cultural, educational or economic development</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def5"></div>
+	</div></section>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
