--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -117,7 +117,7 @@
     
         <h2 id="hdng1">Overview</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
-<p>As an Indian, you are subject to the same tax rules as other Canadian residents unless your income is eligible for the tax exemption under section 87 of the Indian Act. That exemption applies to the income of an Indian that is earned <a href="#ajax-def4" aria-controls="ajax-def3" class="overlay-lnk" role="button">on a reserve <span class="far fa-question-circle"></span></a>or that is considered to be earned on a reserve, as well as to goods bought on, or delivered to, a reserve.</p>
+<p>As an Indian, you are subject to the same tax rules as other Canadian residents unless your income is eligible for the tax exemption under section 87 of the Indian Act. That exemption applies to the income of an Indian that is earned <a href="#ajax-def4" aria-controls="ajax-def3" class="overlay-lnk" role="button">on a reserve <span class="far fa-question-circle"></span></a> or that is considered to be earned on a reserve, as well as to goods bought on, or delivered to, a reserve.</p>
  <details><summary>Daniels decision</summary>
 <p>The 2016 Supreme Court of Canada decision in Daniels v. Canada, 2016 SCC 12, declared that Métis and non-status Indians are “Indians” for the purpose of federal Parliament’s law-making jurisdiction under subsection 91(24) of the Constitution Act, 1867. However, this decision did not change who is an “Indian” in the Indian Act.</p>
 <p>The tax exemption available under the Indian Act only applies to an individual who is an “Indian” as defined in the Indian Act. Therefore, the Daniels decision <strong>does not</strong> change the group of individuals currently eligible for the tax exemption. We will continue to apply and administer the Indian Act tax exemption in the same way as prior to the Daniels decision.</p>
@@ -128,7 +128,7 @@
 <p>Mr. Benoit and the Treaty 8 plaintiffs subsequently filed an application for leave to appeal the decision to the Supreme Court of Canada. On April&nbsp;29,&nbsp;2004, the Supreme Court of Canada dismissed the application for leave to appeal. The Court of Appeal's decision is now valid and binding.</p>
 <p>While it is now clear that Treaty 8 Indians are not entitled to a general tax exemption, if the property of a Treaty&nbsp;8 Indian is situated on a reserve, it continues to be eligible for the tax exemption under section&nbsp;87 of the Indian Act.</p>
 
-<p>Learn more: <a href="http://decisions.fca-caf.gc.ca/en/2003/2003fca236/2003fca236.html">Federal Court of Appeal Decisions - Benoit cas, file number: A-47-02</a>.</p>
+<p>Learn more: <a href="http://decisions.fca-caf.gc.ca/en/2003/2003fca236/2003fca236.html">Federal Court of Appeal Decisions - Benoit cas, file number: A-47-02</a></p>
 
  </details>
  <details><summary>Self-governing agreements</summary>
@@ -588,11 +588,15 @@
  
         <h2 id="hdng16">Goods and services tax/Harmonized sales tax (GST/HST)</h2>
 <p>The GST applies to most supplies of property and services made in Canada. The HST applies to most supplies of property and services in the provinces of Nova Scotia, New Brunswick, Newfoundland and Labrador, Prince Edward Island, and Ontario.</p>
-<p>Purchases of property and services by Indians may be relieved from GST/HST. For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples.html">GST/HST and Indigenous peoples</a>.</p>
-<p>Oher taxes specific to First Nations and Indigenous governments may also apply. All individuals, including Indians, have to pay these taxes if they apply. The following taxes may apply on lands governed by a First Nation or an Indigenous government:</p>
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-goods-services-tax.html">First Nations goods and services Tax (FNGST)</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-tax.html">First Nations tax (FNT)</a></li>
+<p>Purchases of property and services by Indians may be relieved from GST/HST.</p>
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples.html">GST/HST and Indigenous peoples</a></p>
+   <h3>Other taxes specific to First Nations and Indigenous governments</h3>
+<p>Oher taxes specific to First Nations and Indigenous governments may also apply. All individuals, including Indians, have to pay these taxes if they apply.</p>
+<p>Learn more about the following taxes that may apply on lands governed by a First Nation or an Indigenous government:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-goods-services-tax.html">First Nations goods and services Tax (FNGST)</a></li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-tax.html">First Nations tax (FNT)</a></li>
 </ul>
 
 <div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#terms-used-first-nations"></div>	   
