--- a/payroll/calculate/payment/first-nations-pop.html
+++ b/payroll/calculate/payment/first-nations-pop.html
@@ -88,7 +88,7 @@
 
 <div id="ajax-fntermall">
 <div id="ajax-fnterm">
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations employee or worker on this page refers <strong>only</strong> to an employee or a worker who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations on this page refers <strong>only</strong> to an individual who is registered or entitled to be registered under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>. </p>
  </div>
 <p>Many Indigenous people in Canada prefer not to describe themselves as Indians and view this term as rooted in colonialism and racism. Under the Indian Act, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
  </div>
@@ -319,10 +319,10 @@
   <p>The central management and control of an organization is usually considered to be exercised by the group that performs the function of a board of directors of the organization. However, it may be that the real management and control of an organization is exercised by some other person or group. Generally, management and control is exercised at the principal place of business but it is recognized that this function may be legitimately exercised in a place other than the principal administrative office of the organization. It is a question of fact where the central management and control is exercised.</p> 
 </div> </dd> 
  <dt> 
-  <strong>First Nations employee</strong> 
+  <strong>First Nations</strong> 
  </dt> 
  <dd> 
- <div id="def2">  <p>"First Nations employee" means an employee who is an Indian as defined for the purposes of the Indian Act. </p></div> 
+ <div id="def2">  <p>"First Nations" means an individual who is registered or entitled to be registered under the Indian Act. </p></div> 
  </dd> 
  <dt> 
   <strong>First Nations employee lives on the reserve</strong> 
