--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -1028,7 +1028,7 @@ You need to review specific considerations when you apply the connecting factors
   </ul>
 </nav>
 
-<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
+<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee, worker or recipient </h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fnterm"></div>
 	</div></section>
