--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -138,7 +138,9 @@
 
   
         <h2 id="hdng2">Tax exemption</h2>
-<p>If you have personal property-including income-situated on a reserve, that property is exempt from tax under section 87 of the Indian Act. Contact your local band office to find out if a tract of land is a reserve for purposes of this exemption. If your band is not certain about the status of the land, contact <a href="https://www.canada.ca/en/crown-indigenous-relations-northern-affairs.html">Crown-Indigenous Relations and Northern Affairs Canada</a>.</p>
+<p>If you have personal property-including income-situated on a reserve, that property is exempt from tax under section 87 of the Indian Act. Contact your local band office to find out if a tract of land is a reserve for purposes of this exemption. </p>
+
+<p>Learn more if your band is not certain about the status of the land: <a href="https://www.canada.ca/en/crown-indigenous-relations-northern-affairs.html">Crown-Indigenous Relations and Northern Affairs Canada</a></p>
 
    
         <h3 id="hdng2-1">Facts</h3>
@@ -152,7 +154,7 @@
 <details><summary>Bill C-3</summary>
 <p>If you are entitled to be registered under the Indian Act under Bill&nbsp;C-3 (also known as the Gender Equity in Indian Registration Act, SC 2010, c.18), you may qualify for the section 87 tax exemption for property situated on a reserve starting on January&nbsp;31,&nbsp;2011. This is the date that Bill&nbsp;C-3 came into effect. Only income you earn, or purchases you make on a reserve, on or after January&nbsp;31,&nbsp;2011, may be exempt from tax.</p>
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
-<p>For general information about Bill&nbsp;C-3 including how to register as a First Nations individual with ISC, please visit <a href="https://www.canada.ca/en/indigenous-services-canada.html">Indigenous Services Canada</a>.</p>
+<p>Learn more about Bill&nbsp;C-3 including how to register as a First Nations individual with ISC: <a href="https://www.canada.ca/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
  </details>
 
 <details><summary>Bill S-3</summary>
@@ -168,7 +170,7 @@
 
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
 
-<p>For general information about Bill&nbsp;S-3 including how to register as a First Nations individual with ISC, please visit <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a>.</p>
+<p>Learn more about Bill&nbsp;S-3 including how to register as a First Nations individual with ISC: please visit <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
  </details>
 
 <details><summary>Qalipu Mi'kmaq First Nation</summary>
@@ -179,17 +181,17 @@
 <p>A number of individuals who no longer meet the criteria for founding membership were removed from the updated Founding Members List under the June&nbsp;25,&nbsp;2018 Order in Council. Individuals who were removed from the Founding Members List were also removed from the Indian Register if they were unable to retain their registered Indian status under a different provision of the Indian Act. If you were removed from the Indian Register on August&nbsp;31,&nbsp;2018, you are no longer registered under the Indian Act. Income you earn, or purchases you make on or after August&nbsp;31,&nbsp;2018 will not qualify for the exemption from tax. The CRA will not be seeking repayment of any tax exemption for which you qualified while you were registered as an Indian.</p>
 
 <p>If you do not know when you were added to the Founding Members List or when you were entitled to be registered, please visit the <a href="http://gazette.gc.ca/">Canada Gazette</a> website and enter your name in the search function to obtain your effective date of registration or entitlement to registration. If you were added to the Founding Members List in&nbsp;2018, you will not be able to use the search function to obtain your date of registration; however, you would have received a letter from Crown-Indigenous Relations and Northern Affairs Canada (CIRNAC) dated July 31,&nbsp;2018, confirming your registration under the Indian Act. Your effective date of registration is June&nbsp;25,&nbsp;2018. Similarly, if you were removed from the Founding Members List and the Indian Register in&nbsp;2018, you would have received a letter from CIRNAC dated August&nbsp;31,&nbsp;2018, advising of the removal of your name from the Indian Register. Your effective date of removal is August&nbsp;31,&nbsp;2018.</p>
+
 <h4>Children of the founding members</h4>
 <p>If you are entitled to be registered because you are a child of a founding member of the Qalipu Mi’kmaq First Nation, you will be entitled to be registered on the same date your parent was entitled to be registered unless you were born after that date. In that case, you would be entitled to be registered at the date of your birth. If you are no longer entitled to be registered because your parents were removed from the Founding Members List on August&nbsp;31,&nbsp;2018, your entitlement to be registered and your eligibility to receive the tax exemption will expire on August&nbsp;31,&nbsp;2018, unless you are added as a founding member on the Founding Members List. Only income you earn, or purchases you make on a reserve, on or after the date you are entitled to be registered may be exempt from tax.</p>
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
-<p>For more information about how to register as an Indian with ISC, please visit <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a>.</p>
-<p>To learn more about the Qalipu Mi’kmaq First Nation enrolment process and the 2018 updates to Founding Members List, visit <a href="https://www.sac-isc.gc.ca/eng/1319805325971/1572459825339">Have you applied to join the Qalipu Mi'kmaq First Nation</a>.</p>
+<p>Learn more about how to register as an Indian with ISC: <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
+<p>Learn more about the Qalipu Mi’kmaq First Nation enrolment process and the 2018 updates to Founding Members List: <a href="https://www.sac-isc.gc.ca/eng/1319805325971/1572459825339">Have you applied to join the Qalipu Mi'kmaq First Nation</a></p>
 </details>
     
         <h2 id="hdng3">Employment income</h2>
 
 <p>A <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual's <span class="far fa-question-circle"></span></a> employment income is exempt from income tax under paragraph 81(1)(a) of the Income Tax Act and section 87 of the Indian Act <strong>only if</strong> the income is situated on a reserve. If your employment income is exempt from tax, you do not have to include that income when you file your personal income tax return. If you live in a province that provides child and family benefits which are based on family income, it may be to your advantage to report your exempt income when you file your personal income tax return in order to maximize your provincial benefit entitlements. </p>
-<p>To ensure that you retain tax-exempt status in respect of the reported amounts, you should contact us toll free at <strong>1-800-959-8281</strong> for instructions on how to report the amounts.</p>
  
 <h3>Connecting factors for employment income</h3>
 <p>The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
@@ -252,11 +254,15 @@
 
 <p>Expenses such as union dues and registered pension plan contributions are deducted from the specific source of employment income that they relate to. The net amount of this employment income will be exempt from taxes if the employment income is considered to be situated on a reserve. Any expenses that relate to employment income that is tax-exempt cannot be claimed as deductions against other taxable sources of employment income.</p>
 
-<p>If you need help, call us toll free at <strong>1-800-959-8281</strong>.</p>
+<p>To ensure that you retain tax-exempt status in respect of the reported amounts, you should call the CRA toll free at <strong>1-800-959-8281</strong> for instructions on how to report the amounts.</p>
 
         <h2 id="hdng4">Employment-related income</h2>
-<p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
-<p>Employment Insurance benefits, Canada Pension Plan benefits, Quebec Pension Plan benefits, registered pension plan benefits, retiring allowances, and wage-loss replacement plan benefits you receive are treated in the same way as the employment income that gave rise to the particular income. In other words, if your employment income is exempt from income tax under section 87 of the Indian Act, your employment-related income will also be exempt. If part of your employment income is exempt, any employment-related income arising from that exempt income will also be exempt from income tax.</p>
+<p>A <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual's <span class="far fa-question-circle"></span></a> Employment Insurance benefits, Canada Pension Plan benefits, Quebec Pension Plan benefits, registered pension plan benefits, retiring allowances, and wage-loss replacement plan benefits you receive are treated in the same way as the employment income that gave rise to the particular income. In other words, if your employment income is exempt from income tax under section 87 of the Indian Act, your employment-related income will also be exempt. If part of your employment income is exempt, any employment-related income arising from that exempt income will also be exempt from income tax.</p>
+
+ <section class="alert alert-info">
+<p>Each of the following type of employment-related income information applies to <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a></p>
+</section> 
+
 <div id="emp-related"> 
 <details><summary>Registered pension plan benefits</summary>
 <p>If you receive registered pension plan (RPP) benefits as a result of employment income that was exempt from income tax under section 87 of the Indian Act, the RPP benefits will also be exempt from income tax. If a portion of your employment income was exempt, then a similar portion of the related registered pension plan benefits will be exempt from income tax.</p>
@@ -265,14 +271,14 @@
 <p>If you transferred an amount from your registered pension plan (RPP) to a registered retirement savings plan (RRSP), and the registered pension plan related to employment income that was wholly or partially exempt from income tax under section 87 of the Indian Act, the amounts you receive from the RRSP will also be wholly or partially tax-exempt in the same proportion. This also applies to payments from a registered retirement income fund (RRIF). Any RRIF payments you receive will be taxed in the same manner as payments from the particular registered plan from which property was transferred to the RRIF.</p>
 </details>  
 <details><summary>Pension benefits on marriage breakdown</summary>
-<p>If you are an Indian and receive your share of your former spouse’s or common-law partner’s pension benefits as a result of the breakdown of your marriage or common-law partnership, and it relates to your former spouse’s or common-law partner’s employment income that was wholly or partially exempt from income tax under section 87 of the Indian Act, the amounts you receive will also be wholly or partially exempt from income tax. In addition, to be eligible for the exemption, you must have a right to an interest in the pension benefits and be legally entitled to the pension income.</p>
+<p>If you are a First Nations individual and receive your share of your former spouse’s or common-law partner’s pension benefits as a result of the breakdown of your marriage or common-law partnership, and it relates to your former spouse’s or common-law partner’s employment income that was wholly or partially exempt from income tax under section 87 of the Indian Act, the amounts you receive will also be wholly or partially exempt from income tax. In addition, to be eligible for the exemption, you must have a right to an interest in the pension benefits and be legally entitled to the pension income.</p>
 </details>  
 <details><summary>Survivor pension benefits</summary>
-<p>If you are an Indian and, as a beneficiary, receive survivor pension benefits that relate to the deceased member’s employment income that was wholly or partially exempt from tax under section 87 of the Indian Act, the amount you receive will also be wholly or partially exempt from income tax in the same proportion as the employment income to which it relates.</p>
+<p>If you are a First Nations individual and, as a beneficiary, receive survivor pension benefits that relate to the deceased member’s employment income that was wholly or partially exempt from tax under section 87 of the Indian Act, the amount you receive will also be wholly or partially exempt from income tax in the same proportion as the employment income to which it relates.</p>
 </details>  
   </div>
         <h2 id="hdng5">Business income</h2>
-<p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
+
 <p>A business is an activity that you intend to carry on for profit and includes:</p>
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Profession</li>
@@ -282,7 +288,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Undertaking of any kind</li>
 <li><span class="fas fa-check fa-li text-success"></span> Adventure or concern in the nature of trade.</li>
 </ul>
-<p>The information on this page is for sole proprietorships, partnerships, and self-employed individuals with business income that may be exempt from tax if that income is situated on a reserve. If your business is incorporated, this information does not apply to you because section 87 of the Indian Act does not apply to corporations, even if they are owned or controlled by an Indian.</p>
+<p>The information on this page is for <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations sole proprietorships, partnerships, and self-employed individuals <span class="far fa-question-circle"></span></a> with business income that may be exempt from tax if that income is situated on a reserve. If your business is incorporated, this information does not apply to you because section 87 of the Indian Act does not apply to corporations, even if they are owned or controlled by an Indian.</p>
 <p>For more information about calculating and reporting your business income or loss, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/business-income-tax-reporting/business-income.html">Small business and self-employed income</a>.</p>
  
         <h3 id="hdng5-1">Connecting factors for business income</h3>
