tech link update

--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -1006,13 +1006,16 @@ input[type='radio'] {
 
 
 <aside id="gcnav-side">
-          <p class="mrgn-tp-lg"><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Underused Housing Tax technical information</a></p> 
+          <h5 class="mrgn-tp-lg">Technical resources</h5>
+		<ul>
+			<li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Underused Housing Tax technical information</a></li>
+		</ul>
            
         </aside>
 	    <section id="Y" class="mfp-hide modal-dialog modal-content overlay-def">
 <header class="modal-header"><h2 class="modal-title">Foreign national</h2></header>
 <div class="modal-body">
-	<p>Testing content</p>
+	<p>A foreign national is an individual who is not a Canadian citizen or permanent resident.</p>
 </div>
 </section>
 	    
