--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1244,7 +1244,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <details>
                   <summary id="primary-res">Primary place of residence</summary>
                   <div id="primary-res-content">
-                    <p>To qualify for this exemption, a dwelling unit that is part of the residential property must be the primary place <mark>of residence</mark> of any of the following for the calendar year:</p>
+                    <p>To qualify for this exemption, a dwelling unit that is part of the residential property must be the primary place of residence of any of the following for the calendar year:</p>
 			  <ul>
 				  <li>You or your spouse or common-law partner</li>
 				  <li>Your child, or your spouse's or common-law partner's child, who occupies the residential property while pursuing authorized study at a designated learning institution</li>
