--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -289,7 +289,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Adventure or concern in the nature of trade.</li>
 </ul>
 <p>The information on this page is for <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations sole proprietorships, partnerships, and self-employed individuals <span class="far fa-question-circle"></span></a> with business income that may be exempt from tax if that income is situated on a reserve. If your business is incorporated, this information does not apply to you because section 87 of the Indian Act does not apply to corporations, even if they are owned or controlled by an Indian.</p>
-<p>For more information about calculating and reporting your business income or loss, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/business-income-tax-reporting/business-income.html">Small business and self-employed income</a>.</p>
+<p>Learn more about calculating and reporting your business income or loss: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/business-income-tax-reporting/business-income.html">Small business and self-employed income</a></p>
  
         <h3 id="hdng5-1">Connecting factors for business income</h3>
 <p>If your business income is situated on a reserve, it is exempt from tax under section 87 of the Indian Act. The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
@@ -314,19 +314,22 @@
 <p><strong>All of the connecting factors have to be considered</strong> when determining whether or not business income is connected to a reserve. </p>
 
 </div>
+<p>If you need help, call the CRA at <strong>1-800-959-5525</strong>. </p>
+
+ <section class="alert alert-info">
+<p>Each of the individuals in the following examples is a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a>. The examples concern income tax only and do not discuss GST/HST implications.</p>
+</section> 
 
 <p>The following examples may help you determine if your business income is situated on a reserve, and thus exempt from tax.</p>
 
 <details><summary>Examples where exempt and where not exempt</summary>
-<section class="alert alert-info">
-<p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications.</p>
-</section>
+
  <div id="example-self-business"> 
     <h4>Example - Individual A</h4>
     <p>Individual A lives on a reserve and operates an independent logging business as a sole proprietorship. Individual A cuts timber on land off the reserve for a logging company that is located and sells it off the reserve. In the absence of other factors, individual A's income from this business is considered to be <strong>taxable</strong>, because the individual A income-earning activities and customer is off the reserve.</p>
     <h4>Example - Individual B</h4>
   
-    <p>Individual B owns a retail store on a reserve. The store sells goods to both Indian and non-Indian customers. Since individual B's business activities take place on a reserve, their income from this business is <strong>tax-exempt</strong>.</p>
+    <p>Individual B owns a retail store on a reserve. The store sells goods to both First Nations and non-First Nations customers. Since individual B's business activities take place on a reserve, their income from this business is <strong>tax-exempt</strong>.</p>
 
     <h4>Example - Individual C</h4>
     <p>Individual C operates a trucking business that hauls logs from cutting sites located off-reserve to logging mills located off-reserve. Individual C's only customer is a logging company that is not located on a reserve. Individual C has a garage on a reserve where individual C stores their trucks and an on-reserve office where the individual C keeps the books and records for the business. Individual C travels 20 kms from their off-reserve home each day to pick up their truck from the on-reserve garage. Individual C then travels to the off-reserve cutting sites. Individual C spends a few hours each week doing the bookkeeping for the business at the on-reserve office.</p>
@@ -349,7 +352,6 @@
       <li>The owner not only lives on the reserve but has a strong connection to the community on the reserve and started and grew the business on the reserve</li>
     </ul>
   </div>
-<p>If you need help, call the CRA at <strong>1-800-959-5525</strong>. </p>
 </details>
    
         <h3>Prorating business income and expenses</h3>
