--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -1006,7 +1006,7 @@ input[type='radio'] {
 
 
 <aside id="gcnav-side">
-          <h5 class="mrgn-tp-lg">Technical resources</h5>
+          <h5 class="mrgn-tp-lg">Technical resource</h5>
 		<ul>
 			<li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Underused Housing Tax technical information</a></li>
 		</ul>
