--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -125,7 +125,7 @@
   <li><a href="#h3">Get support grouping SR&amp;ED work</a></li>
 </ul>
 <h2 id="h1">What is an SR&amp;ED  project </h2>
-<p>An SR&amp;ED project is a set of interrelated activities that together achieve or attempt <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#scntfctchnlgcldvncmnt">scientific or technological advancement</a>. All the activities within an SR&amp;ED project must be related to the same advancement.</p>
+<p>An SR&amp;ED project is a set of interrelated activities that together achieve or attempt to achieve <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#scntfctchnlgcldvncmnt">scientific or technological advancement</a>. All the activities within an SR&amp;ED project must be related to the same advancement.</p>
 <p>To claim SR&amp;ED tax incentives, you need to separate your eligible work from other work you do that is not eligible. After you have identified your eligible work, you can then group it into one or more SR&amp;ED projects. </p>
 
 <details>             
